k8s/overlays/prod/secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: digitmile-prod
